carrer succession and profile details implementation

--- a/src/app/modules/career-succession/career-succession.component.html
+++ b/src/app/modules/career-succession/career-succession.component.html
@@ -1,3 +1,3 @@
-<p>career-succession works!</p>
-<h1>Yayyyysss</h1>
-<h1>jczjvkj</h1>
+<ngx-single-column-layout>
+    <router-outlet></router-outlet>
+</ngx-single-column-layout>
