--- a/src/app/modules/career-succession/profile-details/profile-details.component.html
+++ b/src/app/modules/career-succession/profile-details/profile-details.component.html
@@ -1,4 +1,5 @@
-<ngx-componentsheader [requiredButton]="[{name:'plan', label:'Create succession plan'}]" (buttonClick)="addPlan()" pageName='Roles'></ngx-componentsheader>
+<ngx-componentsheader [requiredButton]="[{name:'plan', label:'Create succession plan'}]" (buttonClick)="addPlan()"
+  pageName='Roles'></ngx-componentsheader>
 <div style="display: flex; flex-direction: row; justify-content: flex-start; flex: auto; padding-bottom: 5px;">
   <span><i class="far fa-arrow-alt-circle-left"></i><a (click)="goback()" style="margin-left: 3px;">Back</a></span>
 </div>
@@ -6,118 +7,133 @@
   <nb-card>
     <nb-card-header>Employee Information</nb-card-header>
     <nb-card-body>
-        <div class="row" style="display: flex; flex-direction: row; justify-content: left; align-items: flex-start;">
-          <div class="col-md">
-            <img src="assets/icons/department.jpg" style="width:3rem;">
-          </div>
-
-          <div class="col-md-11">
-            <div class="row" style="display: flex; flex-direction: row; justify-content: space-between;">
-                <div class="col-md-4 col-lg-4 col-sm-6">
-                    <span style="font-weight: 600; padding-right:25px;">Name:</span><span>{{data.employee_name}}</span>
-                  </div>
-
-                  <div class="col-md-4 col-lg-4 col-sm-6">
-                      <span style="font-weight: 600; padding-right:25px;">Department:</span><span>{{data.department_name}}</span>
-                  </div>
-
-                  <div class="col-md-4 col-lg-4 col-sm-6">
-                    <span style="font-weight: 600; padding-right:25px;">Level:</span><span>{{data.level}}</span>
-                  </div>
-                </div>
-
-                <div class="row" style="display: flex; flex-direction: row; justify-content: space-between;">
-                  <div class="col-md-4 col-lg-4 col-sm-6">
-                      <span style="font-weight: 600; padding-right:25px;">Job Title:</span><span>{{data.job_role_name}}</span>
-                    </div>
-
-                    <div class="col-md-4 col-lg-4 col-sm-6">
-                      <span style="font-weight: 600; padding-right:25px;">Unit/Division:</span><span>{{data.unit_name}}</span>
-                    </div>
-
-                    <div class="col-md-4 col-lg-4 col-sm-6">
-                      <span style="font-weight: 600; padding-right:25px;">Location:</span><span>{{data.location_name}}</span>
-                    </div>
-                  </div>
-            </div>
-          </div>
-    </nb-card-body>
-  </nb-card>
+      <div class="row" style="display: flex; flex-direction: row; justify-content: left; align-items: flex-start;">
+        <div class="col-md">
+          <img src="assets/icons/department.jpg" style="width:3rem;">
         </div>
 
-        <div style="padding: 10px"></div>
+        <div class="col-md-11">
+          <div class="row" style="display: flex; flex-direction: row; justify-content: space-between;">
+            <div class="col-md-4 col-lg-4 col-sm-6">
+              <span style="font-weight: 600; padding-right:25px;">Name:</span><span>{{data.employee_name}}</span>
+            </div>
+
+            <div class="col-md-4 col-lg-4 col-sm-6">
+              <span
+                style="font-weight: 600; padding-right:25px;">Department:</span><span>{{data.department_name}}</span>
+            </div>
+
+            <div class="col-md-4 col-lg-4 col-sm-6">
+              <span style="font-weight: 600; padding-right:25px;">Level:</span><span>{{data.level}}</span>
+            </div>
+          </div>
+
+          <div class="row" style="display: flex; flex-direction: row; justify-content: space-between;">
+            <div class="col-md-4 col-lg-4 col-sm-6">
+              <span style="font-weight: 600; padding-right:25px;">Job Title:</span><span>{{data.job_role_name}}</span>
+            </div>
+
+            <div class="col-md-4 col-lg-4 col-sm-6">
+              <span style="font-weight: 600; padding-right:25px;">Unit/Division:</span><span>{{data.unit_name}}</span>
+            </div>
+
+            <div class="col-md-4 col-lg-4 col-sm-6">
+              <span style="font-weight: 600; padding-right:25px;">Location:</span><span>{{data.location_name}}</span>
+            </div>
+          </div>
+        </div>
+      </div>
+    </nb-card-body>
+  </nb-card>
+</div>
+
+<div style="padding: 10px"></div>
 
 <nb-card>
-  <nb-card-header>Role Competencies</nb-card-header>
+  <nb-card-header style="font-size: large; font-weight: bold;">Role Competencies</nb-card-header>
   <nb-card-body>
-    <div>
+    
       <div class="row" style="display: flex; flex-direction: row; justify-content: left; align-items: flex-start;">
         <div class="col-md-6">
-          
-          <span class="title">Qualifications</span>
+
+          <span class="title" style="font-size: large; font-weight: bold;">Qualifications</span>
           <div *ngFor="let qualification of data.qualifications">
             <div style="padding: 5px;"></div>
             <div style="display: flex; flex-direction: column; justify-self: center;">
               <span class="title">{{qualification.name}}</span>
-              <span class="date">From {{qualification.startdate|date:'MMM d, y'}} - {{qualification.stopdate|date:'MMM d, y'}}</span>
+              <span class="date">From {{qualification.startdate|date:'MMM d, y'}} - {{qualification.stopdate|date:'MMM
+                d, y'}}</span>
             </div>
           </div>
 
-          <div style="padding: 15px;"></div>
-          <span class="title">Abilities</span>
-          <div style="padding: 5px;"></div>
-          <div *ngFor="let ability of data.abilities">
-            <p style="font-size: 14px;">{{ability.name}}</p>
-            <!-- <p style="font-size: 14px;">Ability to create financial reports and audits.</p>
-            <p style="font-size: 14px;">Ability to create financial reports and audits.</p>
-            <p style="font-size: 14px;">Ability to create financial reports and audits.</p> -->
-          </div>
+          <!-- <div style="padding: 15px;"></div> -->
+
 
 
 
         </div>
+  
 
+
+
+        
         <div class="col-md-6">
-          <span class="title">Certifications</span>
+          <span class="title" style="font-size: large; font-weight: bold;">Certifications</span>
           <div style="padding: 5px;"></div>
-          <div style="display: flex; flex-direction: column; justify-self: center;" *ngFor="let certification of data.certification">
-            <span><i class="fas fa-circle" style="font-size:xx-small; color: #4847E0; padding-right: 4px;"></i>{{certification.name}}</span>
-            <span ><i class="fas fa-circle" style="font-size:xx-small; color: #4847E0; padding-right: 4px;"></i>Microsoft Azure Certification</span>
-            <span><i class="fas fa-circle" style="font-size:xx-small; color: #4847E0; padding-right: 4px;"></i>Asp.Net Certification</span>
-          </div>
-
-          <div style="padding: 50px;"></div>
-
-          <span class="title">Skills</span>
-          <div style="padding: 5px;"></div>
-          <div style="display: flex; flex-direction: column; justify-self: center;" *ngFor="let skill of data.skills">
-            <span>{{skill.name}}</span>
-            <nb-progress-bar [value]="skill.point" size="tiny" status="primary"></nb-progress-bar>
-            <!-- <div style="padding: 3px;"></div>
-            <span>Javascript</span>
-            <nb-progress-bar [value]="90" size="tiny" status="primary"></nb-progress-bar>
-            <div style="padding: 3px;"></div>
-            <span>CSS</span>
-            <nb-progress-bar [value]="40" size="tiny" status="primary"></nb-progress-bar>
-            <div style="padding: 3px;"></div>
-            <span>Figma</span>
-            <nb-progress-bar [value]="30" size="tiny" status="primary"></nb-progress-bar>
-            <div style="padding: 3px;"></div>
-            <span>Python</span>
-            <nb-progress-bar [value]="75" size="tiny" status="primary"></nb-progress-bar> -->
+          <div style="display: flex; flex-direction: column; justify-self: center;"
+            *ngFor="let certification of data.certification">
+            <span><i class="fas fa-circle"
+                style="font-size:xx-small; color: #4847E0; padding-right: 4px;"></i>{{certification.name}}</span>
+            <span><i class="fas fa-circle" style="font-size:xx-small; color: #4847E0; padding-right: 4px;"></i>Microsoft
+              Azure Certification</span>
+            <span><i class="fas fa-circle" style="font-size:xx-small; color: #4847E0; padding-right: 4px;"></i>Asp.Net
+              Certification</span>
           </div>
         </div>
       </div>
 
-    </div>
+    
+    <div class="row" style="display: flex; flex-direction: row; align-items: flex-start;
+     margin-top: 4rem;margin-bottom: 7rem;" >
+     
+      <div class="col-sm-6">
+        <span class="title" style="font-size: large; font-weight: bold;">Abilities</span>
+        <div style="padding: 5px;"></div>
+        <div *ngFor="let ability of data.abilities">
+          <p style="font-size: 14px;">{{ability.name}}</p>
+          <!-- <p style="font-size: 14px;">Ability to create financial reports and audits.</p>
+        <p style="font-size: 14px;">Ability to create financial reports and audits.</p>
+        <p style="font-size: 14px;">Ability to create financial reports and audits.</p> -->
+        </div>
 
+      </div>
+      <div class="col-sm-6">
+        <span class="title" style="font-size: large; font-weight: bold;">Skills</span>
+        <div style="padding: 5px;"></div>
+        <div style="display: flex; flex-direction: column; justify-self: center;" *ngFor="let skill of data.skills">
+          <span>{{skill.name}}</span>
+          <nb-progress-bar [value]="skill.point" size="tiny" status="primary"></nb-progress-bar>
+
+
+        </div>
+
+      </div>
+    </div>
   </nb-card-body>
 </nb-card>
 <div style="padding: 10px"></div>
 <nb-card>
   <div style="display: flex; flex-direction: row; justify-content: space-between; align-items: center;">
-    <h5 style="padding:20px;">Potential Succesors</h5><a href="" style="padding:20px; font-weight:600; text-decoration: underline;">View Tree</a>
+    <h5 style="padding:20px;">Potential Succesors</h5><a href=""
+      style="padding:20px; font-weight:600; text-decoration: underline;">View Tree</a>
   </div>
   <ngx-tableheader></ngx-tableheader>
-  <ngx-tablecomponent  [tableColum]="successionTable"></ngx-tablecomponent>
+  <ngx-tablecomponent [tableColum]="successionTable"></ngx-tablecomponent>
 </nb-card>
+
+
+
+<div class="row">
+
+
+</div>
