--- a/src/app/modules/career-succession/sucession-plan-detail/sucession-plan-detail.component.html
+++ b/src/app/modules/career-succession/sucession-plan-detail/sucession-plan-detail.component.html
@@ -1,4 +1,4 @@
-<ngx-componentsheader pageName='Succession Plan' [requiredButton]="requiredButtons"></ngx-componentsheader>
+<ngx-componentsheader pageName='Succession Plan' [requiredButton]="requiredButtons" (buttonClick)="pageActionClicked($event)"></ngx-componentsheader>
 <div class="main-page-container">
     <ngx-default-content
         *ngIf="showEmpty"
