--- a/src/app/modules/leave/leave-plan/leave-plan.component.html
+++ b/src/app/modules/leave/leave-plan/leave-plan.component.html
@@ -3,20 +3,22 @@
 
 
 
-<nb-tabset>
-    <nb-tab tabTitle="Approved"></nb-tab>
-    <nb-tab tabTitle="Pending"></nb-tab>
-    <nb-tab tabTitle="Rejected"></nb-tab>
-</nb-tabset>
 
 
-<ngx-tableheader></ngx-tableheader>
+
+<nb-card>
+    <nb-card-body>
+        <nb-tabset>
+            <nb-tab tabTitle="Approved"></nb-tab>
+            <nb-tab tabTitle="Pending"></nb-tab>
+            <nb-tab tabTitle="Rejected"></nb-tab>
+        </nb-tabset>
+        <ngx-tableheader></ngx-tableheader>
 <ngx-tablecomponent [tableColum]="tableColumns"></ngx-tablecomponent>
+    </nb-card-body>
+</nb-card>
 
-<select [(ngModel)]="selectedOption">
-    <option value="1">First Name</option>
-    <option value="2">Last Name</option>
-</select>
+
 
 <ngx-side-modal [(show)]='showAddPlanModal' style="width: 500px;">
     <div modal-header>Apply For Leave</div>
