--- a/src/app/components/employee-master-search/employee-master-search.component.html
+++ b/src/app/components/employee-master-search/employee-master-search.component.html
@@ -3,7 +3,7 @@
     <ngx-employee-list [allowmultipleselection]="allowmultipleselection" [selectedEmployees]="selectedEmployees" [selectedEmployeeRecord]="selectedEmployeeRecord"></ngx-employee-list>
     <button (click)="showMasterSearchModal()" class="underlined-button">
   
-        <span *ngIf="selectedEmployees.length > 0 || selectedEmployeeRecord">Edit</span>
+        <span *ngIf="selectedEmployees.length > 0 || selectedEmployeeRecord">Update</span>
         <span *ngIf="selectedEmployees.length < 1 && !selectedEmployeeRecord">Add Employee</span>
         </button>
 </div>
