--- a/src/app/modules/disbursement/budget/setup/setup.component.html
+++ b/src/app/modules/disbursement/budget/setup/setup.component.html
@@ -8,38 +8,42 @@
     <h4>Set up your overall budget</h4>
   <div class="row">
     <div class="col-sm-6 linear-form">
-      <div class="form-group">
-        <label>Financial Year</label>
-        <ngx-date-range style="width: 60%;"></ngx-date-range>
+      <div class="form-group row">
+        <div class="col">
+          <label>Financial Year</label>
+        <ngx-date-range style="width: 60%;" [(start)]="budget.financial_year_start" [(end)]="budget.financial_year_end"></ngx-date-range>
+        </div>
       </div>
-      <div class="form-group">
+      <div class="form-group row">
+       <div class="col">
         <label>Total amount</label>
-        <app-amount-input></app-amount-input>
+        <app-amount-input [(value)]="budget.amount"></app-amount-input>
+       </div>
       </div>
       <div class="form-group" style="margin-top: 20px">
         <label></label>
-        <button nbButton status="primary" (click)="gotoBudgetItems()">Save and Continue</button>
+        <button nbButton status="primary" (click)="addBudget()">Save and Continue</button>
       </div>
     </div>
   </div>
 </ng-template>
-  <ng-template [ngIf]="page === 2">
 
+<ng-template [ngIf]="page === 2">
 
-  <h4>Add a budget item</h4>
-  <div class="row">
+  <!-- <h4>Add a budget item</h4> -->
+  <!-- <div class="row">
     <div class="col-sm-6 linear-form">
       <div class="form-group">
         <label>Budget Item</label>
-        <input class="form-control" />
+        <input class="form-control" name="itemName" #itemName="ngModel" [(ngModel)]="budgetItem.budget_item" required>
       </div>
       <div class="form-group">
         <label>Budget Code</label>
-        <input class="form-control" />
+        <input class="form-control" name="itemCode" #itemCode="ngModel" [(ngModel)]="budgetItem.budget_code" required>
       </div>
       <div class="form-group">
         <label>Total Budget Amount</label>
-        <input class="form-control" />
+        <input class="form-control" name="itemAmount" #itemAmount="ngModel" [(ngModel)]="budgetItem.amount" required>
       </div>
     </div>
   </div>
@@ -75,7 +79,7 @@
         </div>
       </div>
     </div>
-  </div>
+  </div> -->
   </ng-template>
   </div>
 </div>
