--- a/src/app/modules/disbursement/disbursement/create-disbursement/create-disbursement.component.html
+++ b/src/app/modules/disbursement/disbursement/create-disbursement/create-disbursement.component.html
@@ -6,127 +6,278 @@
   <nb-tabset (changeTab)="selectTab($event)">
     <nb-tab tabTitle="Single Disbursement" [tabId]="TABS.SINGLE">
       <!-- Tab content 1 -->
-      <div class="my-form">
-        <div class="row">
-          <div class="col-sm-6 linear-form">
-            <div class="form-group">
-              <label>Channel</label>
-              <select
-                class="form-control"
-                placeholder="Select Channel"
-              ></select>
+        <div class="form-group row">
+          <div class="col-sm-2 col-md-2 col-lg-2">
+            <label>Channel</label>
+          </div>
+          <div class="col-sm-4 col-md-4 col-lg-4">
+            <select
+            class="form-control"
+            placeholder="Select Channel" name="channel" #channel="ngModel" [(ngModel)]="disbursement.channel"
+          >
+          <option value="1">Option 1</option>
+        </select>
+          </div>
+        </div>
+
+            <div class="form-group row">
+              <div class="col-sm-2 col-md-2 col-lg-2">
+                <label>Disburse for</label>
+              </div>
+              <div class="col-sm-4 col-md-4 col-lg-4">
+                <nb-radio-group [(ngModel)]="disbursement.disburse_for" name="disburse_for" (ngModelChange)="changeDisburse($event)">
+                  <nb-radio value="1">Budget Item</nb-radio>
+                  <nb-radio value="2">Project</nb-radio>
+                </nb-radio-group>
+              </div>
             </div>
-            <div class="form-group">
-              <label>Disburse for</label>
-              <ngx-radio-button
-                [items]="['Budget Item', 'Project']"
-              ></ngx-radio-button>
+
+            <div *ngIf="budgetItem" class="form-group row" style="margin-top: 20px">
+              <div class="col-sm-2 col-md-2 col-lg-2">
+                <label>Budget Item</label>
+              </div>
+              <div class="col-sm-4 col-md-4 col-lg-4">
+                <select class="form-control" name="bugetItem" #budgetItem="ngModel" [(ngModel)]="disbursement.budget_item_id" placeholder="Select"></select>
+                <option value="1">Select Budget Item</option>
+              </div>
             </div>
-            <div class="form-group" style="margin-top: 20px">
-              <label>Budget Item</label>
-              <select class="form-control" placeholder="Select"></select>
+
+            <div *ngIf="!budgetItem" class="form-group row" style="margin-top: 20px">
+              <div class="col-sm-2 col-md-2 col-lg-2">
+                <label>Project</label>
+              </div>
+              <div class="col-sm-4 col-md-4 col-lg-4">
+                <select class="form-control" name="projectItem" #projectItem="ngModel" [(ngModel)]="disbursement.project_id" placeholder="Select"></select>
+                <option value="1">Select Project Item</option>
+              </div>
             </div>
-            <div class="form-group">
-              <label>Recipient</label>
-              <ngx-radio-button
-                [items]="['New account', 'Existing Beneficiary', 'Employee']"
-              ></ngx-radio-button>
+
+
+            <div class="form-group row">
+              <div class="col-sm-2 col-md-2 col-lg-2">
+                <label>Recipient</label>
+              </div>
+              <div class="col-sm-4 col-md-4 col-lg-4">
+                <nb-radio-group [(ngModel)]="disbursement.recipient" name="recipient" (ngModelChange)="changeRecipient($event)">
+                  <nb-radio value="1">New account</nb-radio>
+                  <nb-radio value="2">Existing Beneficiary</nb-radio>
+                  <nb-radio value="3">Employee</nb-radio>
+                </nb-radio-group>
+              </div>
             </div>
-            <div class="form-group" style="margin-top: 20px">
-              <label>Beneficiary</label>
-              <select class="form-control" placeholder="Select Bank"></select>
+
+            <div *ngIf="recipient == 2" class="form-group row" style="margin-top: 20px">
+              <div class="col-sm-2 col-md-2 col-lg-2">
+                <label>Beneficiary</label>
+              </div>
+              <div class="col-sm-4 col-md-4 col-lg-4">
+                <select class="form-control" name="beneficiary" #beneficiary="ngModel" [(ngModel)]="disbursement.beneficiary_id" placeholder="Select Bank"></select>
+              </div>
             </div>
-            <div class="form-group" style="margin-top: 20px">
-              <label>Select Employee</label>
-              <ngx-employee-master-search></ngx-employee-master-search>
+
+            <div *ngIf="recipient ==3" class="form-group row" style="margin-top: 20px">
+              <div class="col-sm-2 col-md-2 col-lg-2">
+                <label>Select Employee</label>
+              </div>
+              <div class="col-sm-4 col-md-4 col-lg-4">
+                <ngx-employee-master-search></ngx-employee-master-search>
+              </div>
             </div>
-            <div class="form-group" style="margin-top: 20px">
-              <label>Bank Name</label>
-              <select class="form-control" placeholder="Select Bank"></select>
+
+            <div *ngIf="recipient ==1">
+              <div class="form-group row" style="margin-top: 20px">
+                <div class="col-sm-2 col-md-2 col-lg-2">
+                  <label>Bank Name</label>
+                </div>
+                <div class="col-sm-4 col-md-4 col-lg-4">
+                  <select class="form-control" name="bankName" #bankName="ngModel" [(ngModel)]="disbursement.bank_name" placeholder="Select Bank"></select>
+                </div>
+              </div>
+
+              <div class="form-group row" style="margin-top: 20px">
+                <div class="col-sm-2 col-md-2 col-lg-2">
+                  <label>Account Number</label>
+                </div>
+                <div class="col-sm-4 col-md-4 col-lg-4">
+                  <select class="form-control" name="accountNo" #accountNo="ngModel" [(ngModel)]="disbursement.account_number" placeholder="Select Bank"></select>
+                </div>
+              </div>
+
+              <div class="form-group row" style="margin-top: 20px">
+                <div class="col-sm-2 col-md-2 col-lg-2">
+                  <label>Account Name</label>
+                </div>
+                <div class="col-sm-4 col-md-4 col-lg-4">
+                  <select class="form-control" name="accountName" #accountName="ngModel" [(ngModel)]="disbursement.account_name" placeholder="Select Bank"></select>
+                </div>
+              </div>
+
             </div>
-            <div class="form-group" style="margin-top: 20px">
-              <label>Account Number</label>
-              <select class="form-control" placeholder="Select Bank"></select>
+
+            <div class="form-group row" style="margin-top: 20px">
+              <div class="col-sm-2 col-md-2 col-lg-2">
+                <label>Amount</label>
+              </div>
+              <div class="col-sm-4 col-md-4 col-lg-4">
+                <app-amount-input [(value)]="disbursement.amount"></app-amount-input>
+              </div>
             </div>
-            <div class="form-group" style="margin-top: 20px">
-              <label>Account Name</label>
-              <select class="form-control" placeholder="Select Bank"></select>
+
+            <div class="form-group row" style="margin-top: 20px">
+              <div class="col-sm-2 col-md-2 col-lg-2">
+                <label>Scheduled Date</label>
+              </div>
+              <div class="col-sm-4 col-md-4 col-lg-4">
+                <ngx-date [(ngModel)]="disbursement.scheduled_date"></ngx-date>
+              </div>
             </div>
-            <div class="form-group" style="margin-top: 20px">
-              <label>Amount</label>
-              <select class="form-control" placeholder="Select Bank"></select>
+
+            <div class="form-group row" style="margin-top: 20px">
+              <div class="col-sm-2 col-md-2 col-lg-2">
+                <label>Description/purpose</label>
+              </div>
+              <div class="col-sm-4 col-md-4 col-lg-4">
+                <ngx-wysisyg-input style="padding-left: -10px;" [(ngModel)]="disbursement.description"></ngx-wysisyg-input>
+              </div>
+
             </div>
-            <div class="form-group" style="margin-top: 20px">
-              <label>Scheduled Date</label>
-              <ngx-date></ngx-date>
+
+            <div class="form-group row">
+              <div class="col-sm-2 col-md-2 col-lg-2"></div>
+              <div class="col-sm-4 col-md-4 col-lg-4" >
+                <nb-checkbox *ngIf="recipient ==1" status="basic" [(ngModel)]="disbursement.save_as_beneficiary">Save as Beneficiary</nb-checkbox>&nbsp;&nbsp;
+                <nb-checkbox status="basic" [(ngModel)]="disbursement.recurring" (checkedChange)="toggle($event)">Recurring</nb-checkbox>
+              </div>
             </div>
-            <div class="form-group" style="margin-top: 20px">
-              <label>Description/purpose</label>
-              <textarea></textarea>
+
+            <div *ngIf="recurrence == true">
+              <div class="form-group row" style="margin-top: 20px">
+                <div class="col-sm-2 col-md-2 col-lg-2">
+                  <label>Frequency</label>
+                </div>
+                <div class="col-sm-4 col-md-4 col-lg-4">
+                  <select class="form-control" name="frequency" #frequency="ngModel" [(ngModel)]="disbursement.frequency" placeholder="Frequency"></select>
+                </div>
+
+              </div>
+              <div class="form-group row" style="margin-top: 20px">
+                <div class="col-sm-2 col-md-2 col-lg-2">
+                  <label>Start Date</label>
+                </div>
+                <div class="col-sm-4 col-md-4 col-lg-4">
+                  <ngx-date [max]="disbursement.endDate" [value]="disbursement.startDate"></ngx-date>
+                </div>
+              </div>
+              <div class="form-group row" style="margin-top: 20px">
+                <div class="col-sm-2 col-md-2 col-lg-2">
+                  <label>End Date</label>
+                </div>
+                <div class="col-sm-4 col-md-4 col-lg-4">
+                  <ngx-date  [min]="disbursement.startDate" [value]="disbursement.endDate"></ngx-date>
+                </div>
+              </div>
             </div>
-            <div>
+
+          <div class="form-group row" style="margin-top: 20px">
+            <div class="col-sm-2 col-md-2 col-lg-2">
               <label></label>
-              <!-- <inline-checkbox-group></inline-checkbox-group> -->
             </div>
-            <div class="form-group" style="margin-top: 20px">
-              <label>Frequency</label>
-              <select class="form-control" placeholder="Select Bank"></select>
-            </div>
-            <div class="form-group" style="margin-top: 20px">
-              <label>Start Date</label>
-              <ngx-date></ngx-date>
-            </div>
-            <div class="form-group" style="margin-top: 20px">
-              <label>End Date</label>
-              <ngx-date></ngx-date>
+            <div class="col-sm-4 col-md-4 col-lg-4">
+              <button nbButton status="primary">Submit</button>
             </div>
           </div>
-        </div>
-        <div class="form-group" style="margin-top: 20px">
-          <label></label>
-          <div>
-            <button nbButton status="primary">Submit</button>
-          </div>
-        </div>
-      </div>
     </nb-tab>
     <nb-tab tabTitle="Bulk Disbursement" [tabId]="TABS.BULK">
       <!-- Tab content 2 -->
       <div class="my-form">
-        <div class="row">
-          <div class="col-sm-6 linear-form">
-            <div class="form-group">
-              <label>Channel</label>
-              <select
-                class="form-control"
-                placeholder="Select Channel"
-              ></select>
+        <div class="form-group row">
+          <div class="col-sm-2 col-md-2 col-lg-2">
+            <label>Channel</label>
+          </div>
+          <div class="col-sm-4 col-md-4 col-lg-4">
+            <select
+            class="form-control"
+            placeholder="Select Channel" name="channel" #channel="ngModel" [(ngModel)]="disbursement.channel"
+          ></select>
+          </div>
+        </div>
+
+            <div class="form-group row">
+              <div class="col-sm-2 col-md-2 col-lg-2">
+                <label>Beneficiary list</label>
+              </div>
+              <div class="col-sm-4 col-md-4 col-lg-4">
+                <ngx-file-upload></ngx-file-upload>
+              </div>
             </div>
-            <div class="form-group">
-              <label>Beneficiary list</label>
-              <ngx-file-upload></ngx-file-upload>
+
+
+            <div class="form-group row" style="margin-top: 20px">
+              <div class="col-sm-2 col-md-2 col-lg-2">
+                <label>Scheduled Date</label>
+              </div>
+              <div class="col-sm-4 col-md-4 col-lg-4">
+                <ngx-date></ngx-date>
+              </div>
             </div>
-            <div class="form-group" style="margin-top: 20px">
-              <label>Scheduled Date</label>
-              <ngx-date></ngx-date>
-            </div>
-            <div class="form-group" style="margin-top: 20px">
-              <label>Description/purpose</label>
-              <textarea></textarea>
+
+
+            <div class="form-group row" style="margin-top: 20px">
+              <div class="col-sm-2 col-md-2 col-lg-2">
+                <label>Description/purpose</label>
+              </div>
+              <div class="col-sm-4 col-md-4 col-lg-4">
+                <ngx-wysisyg-input style="padding-left: -10px;" ></ngx-wysisyg-input>
+              </div>
             </div>
             <div>
-              <label></label>
-              <!-- <inline-checkbox-group></inline-checkbox-group> -->
+
+              <div class="form-group row">
+                <div class="col-sm-2 col-md-2 col-lg-2"></div>
+                <div class="col-sm-4 col-md-4 col-lg-4" >
+                  <nb-checkbox status="basic" [(ngModel)]="disbursement.save_as_beneficiary">Save as Beneficiary</nb-checkbox>&nbsp;&nbsp;
+                  <nb-checkbox status="basic" [(ngModel)]="disbursement.recurring" (checkedChange)="toggle($event)">Recurring</nb-checkbox>
+                </div>
+              </div>
+
+              <div *ngIf="recurrence == true">
+                <div class="form-group row" style="margin-top: 20px">
+                  <div class="col-sm-2 col-md-2 col-lg-2">
+                    <label>Frequency</label>
+                  </div>
+                  <div class="col-sm-4 col-md-4 col-lg-4">
+                    <select class="form-control" name="frequency" #frequency="ngModel" [(ngModel)]="disbursement.frequency" placeholder="Frequency"></select>
+                  </div>
+
+                </div>
+                <div class="form-group row" style="margin-top: 20px">
+                  <div class="col-sm-2 col-md-2 col-lg-2">
+                    <label>Start Date</label>
+                  </div>
+                  <div class="col-sm-4 col-md-4 col-lg-4">
+                    <ngx-date [max]="disbursement.endDate" [value]="disbursement.startDate"></ngx-date>
+                  </div>
+                </div>
+                <div class="form-group row" style="margin-top: 20px">
+                  <div class="col-sm-2 col-md-2 col-lg-2">
+                    <label>End Date</label>
+                  </div>
+                  <div class="col-sm-4 col-md-4 col-lg-4">
+                    <ngx-date  [min]="disbursement.startDate" [value]="disbursement.endDate"></ngx-date>
+                  </div>
+                </div>
+              </div>
+
             </div>
-            <div class="form-group" style="margin-top: 20px">
-              <label></label>
-              <div>
+            <div class="form-group row" style="margin-top: 20px">
+              <div class="col-sm-2 col-md-2 col-lg-2">
+                <label></label>
+              </div>
+              <div class="col-sm-4 col-md-4 col-lg-4">
                 <button nbButton status="primary">Submit</button>
               </div>
             </div>
           </div>
-        </div>
-      </div>
     </nb-tab>
   </nb-tabset>
 </div>
