--- a/src/app/components/default-content/default-content.component.html
+++ b/src/app/components/default-content/default-content.component.html
@@ -1,8 +1,15 @@
-<div class="center">
-  <h5 style="text-align: center;">{{pageHeader}}</h5>
-  <p style="text-align: center;">{{pageDescription}}</p>
-
-  <div *ngIf="buttonValue" class="col text-center">
-    <button type="submit" class="btn my-button btn-md" (click)="buttonClick.emit()">{{buttonValue}}</button>
-  </div>
-</div>
+<nb-card>
+  <nb-card-body>
+    <div class="centWrapper">
+      <div class="center">
+        <h5 style="text-align: center;">{{pageHeader}}</h5>
+        <p style="text-align: center;">{{pageDescription}}</p>
+      
+        <div *ngIf="buttonValue" class="col text-center">
+          <button type="submit" class="btn my-button btn-md" (click)="buttonClick.emit()">{{buttonValue}}</button>
+        </div>
+      </div>
+    </div>
+   
+  </nb-card-body>
+</nb-card>
