--- a/src/app/components/default-content/default-content.component.scss
+++ b/src/app/components/default-content/default-content.component.scss
@@ -2,8 +2,14 @@
 display: flex;
 flex-direction: column;
 align-content: center;
-  }
 
+  }
+.centWrapper{
+  display: flex;
+  align-items: center;
+justify-content: center;
+min-height: 300px;
+}
   .my-button {
     padding: 10px;
     cursor: pointer;
